--- a/package.json
+++ b/package.json
@@ -2,22 +2,23 @@
   "name": "brand-music",
   "version": "0.1.0",
   "description": "Strongly typed music theory library",
+  "license": "MIT",
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "scripts": {
-    "build": "tsc",
-    "lint": "eslint src && prettier --check src",
-    "lint:fix": "eslint --fix src",
-    "fmt": "prettier --write src",
-    "test": "vitest",
-    "coverage": "vitest run --coverage"
-  },
   "files": [
     "dist",
     "src",
     "!**/*.test.*"
   ],
+  "scripts": {
+    "build": "tsc",
+    "coverage": "vitest run --coverage",
+    "fmt": "prettier --write src",
+    "lint": "eslint src && prettier --check src",
+    "lint:fix": "eslint --fix src",
+    "test": "vitest"
+  },
   "devDependencies": {
     "@fast-check/vitest": "^0.0.6",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
