--- a/tsconfig.types.json
+++ b/tsconfig.types.json
@@ -6,5 +6,5 @@
     "declarationMap": true,
     "emitDeclarationOnly": true
   },
-  "exclude": ["./src/**/*.test.ts"]
+  "exclude": ["**/*.test.ts"]
 }
