--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -19,18 +19,18 @@ jobs:
           package-name: brand-music
 
       - name: Checkout
-        if: ${{ needs.release-please.outputs.release_created }}
+        if: ${{ steps.release.outputs.release_created }}
         uses: actions/checkout@v3
 
       - name: Install Node.js
-        if: ${{ needs.release-please.outputs.release_created }}
+        if: ${{ steps.release.outputs.release_created }}
         uses: actions/setup-node@v3
         with:
           node-version: 16
           registry-url: "https://registry.npmjs.org"
 
       - uses: pnpm/action-setup@v2
-        if: ${{ needs.release-please.outputs.release_created }}
+        if: ${{ steps.release.outputs.release_created }}
         name: Install pnpm
         id: pnpm-install
         with:
@@ -38,14 +38,14 @@ jobs:
           run_install: false
 
       - name: Get pnpm store directory
-        if: ${{ needs.release-please.outputs.release_created }}
+        if: ${{ steps.release.outputs.release_created }}
         id: pnpm-cache
         shell: bash
         run: |
           echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
 
       - uses: actions/cache@v3
-        if: ${{ needs.release-please.outputs.release_created }}
+        if: ${{ steps.release.outputs.release_created }}
         name: Setup pnpm cache
         with:
           path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
@@ -54,11 +54,11 @@ jobs:
             ${{ runner.os }}-pnpm-store-
 
       - name: Install dependencies
-        if: ${{ needs.release-please.outputs.release_created }}
+        if: ${{ steps.release.outputs.release_created }}
         run: pnpm install
 
       - name: Release
-        if: ${{ needs.release-please.outputs.release_created }}
+        if: ${{ steps.release.outputs.release_created }}
         run: pnpm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
