fix: build before publish

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -57,6 +57,9 @@ jobs:
         if: ${{ steps.release.outputs.release_created }}
         run: pnpm install
 
+      - name: Build
+        run: pnpm build
+
       - name: Release
         if: ${{ steps.release.outputs.release_created }}
         run: pnpm publish
