--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -2,7 +2,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "module": "CommonJS",
-    "outDir": "./dist/cjs"
+    "outDir": "./cjs",
+    "noEmit": false,
+    "declaration": true,
+    "declarationMap": true
   },
   "exclude": ["**/*.test.ts"]
 }
