fix: add permission to release-please action

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -6,6 +6,9 @@ on:
 
 jobs:
   release-please:
+    permissions:
+      contents: write # to create release commit (google-github-actions/release-please-action)
+      pull-requests: write # to create release PR (google-github-actions/release-please-action)
     runs-on: ubuntu-latest
     outputs:
       release_created: ${{ steps.release_please.outputs.release_created }}
