--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -11,10 +11,10 @@ jobs:
       pull-requests: write # to create release PR (google-github-actions/release-please-action)
     runs-on: ubuntu-latest
     outputs:
-      release_created: ${{ steps.release_please.outputs.release_created }}
+      release_created: ${{ steps.release-please.outputs.release_created }}
     steps:
       - uses: google-github-actions/release-please-action@v3
-        id: release
+        id: release-please
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           release-type: node
@@ -22,7 +22,7 @@ jobs:
 
   publish:
     needs: release-please
-    if: ${{ needs.release-please.outputs.release-created }}
+    if: ${{ needs.release-please.outputs.release_created }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -69,7 +69,7 @@ jobs:
   deploy-doc:
     name: Deploy to GitHub Pages
     needs: [release-please, publish]
-    if: ${{ needs.release-please.outputs.release-created }}
+    if: ${{ needs.release-please.outputs.release_created }}
     runs-on: ubuntu-latest
     defaults:
       run:
