--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -74,6 +74,8 @@ jobs:
     defaults:
       run:
         working-directory: website
+    permissions:
+      contents: write
 
     steps:
       - uses: actions/checkout@v3
