--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-tsdoc": "^0.2.17",
     "prettier": "^2.8.8",
     "typescript": "^5.1.6",
     "vitest": "^0.32.2"
