--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -122,6 +122,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Create docs directory
+        run: mkdir docs
+
       - name: Build website
         run: pnpm build
 
