--- a/package.json
+++ b/package.json
@@ -46,7 +46,12 @@
     "lint": "eslint src && prettier --check src",
     "lint:fix": "eslint --fix src",
     "test": "vitest",
-    "typecheck": "vitest typecheck"
+    "typecheck": "vitest typecheck",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "src/**/*.ts": "eslint",
+    "src/**/*": "prettier --list-different --ignore-unknown"
   },
   "devDependencies": {
     "@fast-check/vitest": "^0.0.6",
@@ -58,6 +63,8 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-tsdoc": "^0.2.17",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
     "prettier": "^2.8.8",
     "typescript": "^5.1.6",
     "vitest": "^0.32.2"
