--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version-file: "package.json"
 
       - uses: pnpm/action-setup@v2
         name: Install pnpm
@@ -65,7 +65,7 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version-file: "package.json"
 
       - uses: pnpm/action-setup@v2
         name: Install pnpm
