--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:recommended"],
+  "extends": ["config:recommended", ":pathSemanticCommitType(website, docs)"],
   "rangeStrategy": "bump",
   "packageRules": [
     {
