--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,9 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:recommended", ":pathSemanticCommitType(website, docs)"],
+  "extends": [
+    "config:recommended",
+    ":pathSemanticCommitType(website/**, docs)"
+  ],
   "rangeStrategy": "bump",
   "packageRules": [
     {
