--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -16,10 +16,7 @@ jobs:
       - uses: google-github-actions/release-please-action@v4
         id: release-please
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          release-type: node
-          package-name: brand-music
-          bump-minor-pre-major: true
+          token: ${{ secrets.RELEASE_PLEASE_GITHUB_TOKEN }}
 
   publish:
     needs: release-please
