--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -81,7 +81,7 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v4
         with:
-          node-version-file: "package.json"
+          node-version-file: "website/package.json"
 
       - uses: pnpm/action-setup@v2
         name: Install pnpm
