--- a/website/package.json
+++ b/website/package.json
@@ -16,21 +16,24 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "2.4.3",
-    "@docusaurus/preset-classic": "2.4.3",
-    "@mdx-js/react": "^1.6.22",
-    "clsx": "^1.2.1",
-    "prism-react-renderer": "^1.3.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@docusaurus/core": "3.1.0",
+    "@docusaurus/preset-classic": "3.1.0",
+    "@mdx-js/react": "^3.0.0",
+    "clsx": "^2.1.0",
+    "prism-react-renderer": "^2.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.4.3",
-    "@tsconfig/docusaurus": "^1.0.7",
-    "docusaurus-plugin-typedoc": "^0.19.2",
-    "typedoc": "^0.24.8",
+    "@docusaurus/module-type-aliases": "3.1.0",
+    "@docusaurus/theme-classic": "^3.1.0",
+    "@docusaurus/tsconfig": "^3.1.0",
+    "@docusaurus/types": "^3.1.0",
+    "@types/node": "^20.10.6",
+    "docusaurus-plugin-typedoc": "^0.22.0",
+    "typedoc": "^0.25.6",
     "typedoc-plugin-markdown": "^3.17.1",
-    "typescript": "^4.9.5"
+    "typescript": "5.1.6"
   },
   "browserslist": {
     "production": [
