chore(deps): update vite to >=5.0.12

--- a/package.json
+++ b/package.json
@@ -74,5 +74,10 @@
   },
   "volta": {
     "node": "20.11.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "vite@>=5.0.0 <=5.0.11": ">=5.0.12"
+    }
   }
 }
