--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "fmt": "prettier --write src",
     "lint": "eslint src && prettier --check src",
     "lint:fix": "eslint --fix src",
+    "lint:package": "publint",
     "test": "vitest --typecheck",
     "typecheck": "vitest --typecheck.only"
   },
@@ -140,6 +141,7 @@
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "eslint-plugin-tsdoc": "^0.2.17",
     "prettier": "^3.2.5",
+    "publint": "^0.2.7",
     "tsup": "^8.0.2",
     "typescript": "^5.1.6",
     "vitest": "^1.3.1"
