--- a/package.json
+++ b/package.json
@@ -132,18 +132,18 @@
   },
   "devDependencies": {
     "@fast-check/vitest": "^0.1.0",
-    "@typescript-eslint/eslint-plugin": "^7.1.0",
-    "@typescript-eslint/parser": "^7.1.0",
     "@vitest/coverage-v8": "^1.3.1",
     "del-cli": "^5.1.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "eslint-plugin-tsdoc": "^0.2.17",
+    "globals": "^14.0.0",
     "prettier": "^3.2.5",
     "publint": "^0.2.7",
     "tsup": "^8.0.2",
     "typescript": "^5.1.6",
+    "typescript-eslint": "^7.1.0",
     "vitest": "^1.3.1"
   },
   "volta": {
