--- a/package.json
+++ b/package.json
@@ -124,7 +124,8 @@
     "build": "pnpm tsup",
     "coverage": "vitest run --coverage",
     "fmt": "prettier --write src",
-    "lint": "eslint src && prettier --check src",
+    "lint": "eslint src && prettier --check src && depcruise src",
+    "lint:deps": "depcruise src",
     "lint:fix": "eslint --fix src",
     "lint:package": "publint",
     "test": "vitest --typecheck",
@@ -133,6 +134,7 @@
   "devDependencies": {
     "@fast-check/vitest": "^0.1.0",
     "@vitest/coverage-v8": "^1.3.1",
+    "dependency-cruiser": "^16.2.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-simple-import-sort": "^12.0.0",
