fix(build): change module to `Node16`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "module": "ESNext",
+    "module": "Node16",
     "skipLibCheck": true,
     "moduleResolution": "Node16",
     "noEmit": true,
