--- a/package.json
+++ b/package.json
@@ -129,7 +129,8 @@
     "lint:fix": "eslint --fix src",
     "lint:package": "publint",
     "test": "vitest --typecheck",
-    "typecheck": "vitest --typecheck.only"
+    "typecheck": "vitest --typecheck.only",
+    "website": "pnpm --filter website"
   },
   "devDependencies": {
     "@fast-check/vitest": "^0.1.0",
@@ -155,7 +156,8 @@
   },
   "pnpm": {
     "overrides": {
-      "vite@>=5.0.0 <=5.0.11": ">=5.0.12"
+      "vite@>=5.0.0 <=5.0.11": ">=5.0.12",
+      "follow-redirects@<1.15.4": ">=1.15.4"
     }
   }
 }
